--- a/style.css
+++ b/style.css
@@ -16,6 +16,14 @@ h2{
     display: flex;
     margin-bottom: 100px;
 }
+#skip{
+    margin-top: 100px;
+    margin-left: 5%;
+    padding: 10px;
+    padding-right: 10px;
+
+
+}
 .half-width{
     width: 50%;
     padding-left: 5%;
@@ -85,10 +93,24 @@ padding-top: 50px;
     box-shadow: 10px 15px 40px gray;
     text-align:center;    
 } 
+#social-media{
+    width: 88%;
+    margin-top: 80px;
+    margin-bottom: 10px;
+    margin-left: 60px;
+    margin-right: 50px;
+    padding-left: 30px;
+    padding-right: 30px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 20px gray;
+    
+
+}
 
 footer{
     text-align: center;
     background-color: #5a5e5ac9;
     padding-top: 1px;
+    margin-top: 100px;
     height:200px ;
 }
