--- a/style.css
+++ b/style.css
@@ -87,30 +87,33 @@ padding-top: 50px;
     width: 25%;
     margin-top: 20px;
     margin-left: 5%;
-    margin-right: 5%;
+    margin-right: 7%;
     border-radius: 10px;
     padding: 10px;
     box-shadow: 10px 15px 40px gray;
     text-align:center;    
 } 
 #social-media{
-    width: 88%;
-    margin-top: 80px;
+    width: 83%;
+    height: 200px;
+    text-align: justify;
+    margin-top: 100px;
     margin-bottom: 10px;
-    margin-left: 60px;
-    margin-right: 50px;
-    padding-left: 30px;
-    padding-right: 30px;
+    margin-left: 65px;
+    margin-right: 90px;
+    padding-top: 40px;
+    padding-left: 50px;
+    padding-right: 50px;
     border-radius: 10px;
-    box-shadow: 5px 5px 20px gray;
+    box-shadow: 5px 5px 15px #ddd4d4;
     
-
 }
+
 
 footer{
     text-align: center;
     background-color: #5a5e5ac9;
     padding-top: 1px;
-    margin-top: 100px;
+    margin-top: 200px;
     height:200px ;
 }
