--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body{
 }
 h1{
     font-size: 50px;
+    color: grey;
 }
 h2{
     font-size: 30px;
@@ -30,8 +31,9 @@ h2{
     text-align: justify;
 }
 .half-width img{
-width: 80%;
+width: 100%;
 }
+
 .link-button{
     text-decoration: none;
     background-image: linear-gradient(orange, tomato);
@@ -44,6 +46,7 @@ width: 80%;
 }
 .about-me{
     background-image: url(images/background.png);
+    background-size: 100%;
     margin-right: 0;
     background-repeat: no-repeat;
     
